{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 86,
  "lineage": "bbd77855-021d-f9bf-f6bf-28a26316b171",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:security-group/sg-0de9263eb0a19fab3",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0de9263eb0a19fab3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ede89be93f47dbd4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ml-infra-prod-cluster-cluster-2025101709010181480000000b",
            "name_prefix": "ml-infra-prod-cluster-cluster-",
            "owner_id": "039992076397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-infra-prod-cluster-cluster"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-cluster-cluster",
              "Project": "ML Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:security-group/sg-0ede89be93f47dbd4",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ede89be93f47dbd4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9263eb0a19fab3"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "ml-infra-prod-cluster-node-2025101709010185220000000c",
            "name_prefix": "ml-infra-prod-cluster-node-",
            "owner_id": "039992076397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-infra-prod-cluster-node",
              "kubernetes.io/cluster/ml-infra-prod-cluster": "owned"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-cluster-node",
              "Project": "ML Infrastructure",
              "kubernetes.io/cluster/ml-infra-prod-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-607579583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de9263eb0a19fab3",
            "security_group_rule_id": "sgr-02c66c79493fdab1b",
            "self": false,
            "source_security_group_id": "sg-0ede89be93f47dbd4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1072030147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0ee2a78178e5f2a6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-414169024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0b9555d40cf5639ca",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1273325865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-05fde150365d10124",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2191986367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0846fee3a0e8c4cc3",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2449158814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-09e7550aaf787ac95",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4116316501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0953dec159ba097b5",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-508844699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0d1b4fc1252ede24a",
            "self": false,
            "source_security_group_id": "sg-0de9263eb0a19fab3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-350451234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-04b5164d333219a26",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1906613916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-0047bc78320765e84",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3590012275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ede89be93f47dbd4",
            "security_group_rule_id": "sgr-09d7e706fb3a5676f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:network-acl/acl-015eacfcac8dd3e88",
            "default_network_acl_id": "acl-015eacfcac8dd3e88",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-015eacfcac8dd3e88",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "039992076397",
            "subnet_ids": [
              "subnet-0d1910b7895dce464",
              "subnet-0e009c5a1640de45e",
              "subnet-0f014bf5f3d1e0b54",
              "subnet-0f6c349cf7436d713"
            ],
            "tags": {
              "Name": "ml-infra-prod-vpc-default"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-default",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:route-table/rtb-0a84a7f0a3a786187",
            "default_route_table_id": "rtb-0a84a7f0a3a786187",
            "id": "rtb-0a84a7f0a3a786187",
            "owner_id": "039992076397",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ml-infra-prod-vpc-default"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-default",
              "Project": "ML Infrastructure"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:security-group/sg-058e8f4218ba7ffd1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-058e8f4218ba7ffd1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "039992076397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-infra-prod-vpc-default"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-default",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d779f0df7b724a86",
            "arn": "arn:aws:ec2:us-west-2:039992076397:elastic-ip/eipalloc-0d779f0df7b724a86",
            "association_id": "eipassoc-06d85103d04ff7b20",
            "domain": "vpc",
            "id": "eipalloc-0d779f0df7b724a86",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b00090556fd42786",
            "private_dns": "ip-10-0-101-94.us-west-2.compute.internal",
            "private_ip": "10.0.101.94",
            "public_dns": "ec2-35-165-153-196.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.153.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ml-infra-prod-vpc-us-west-2a"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-us-west-2a",
              "Project": "ML Infrastructure"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cf516ee3904d791",
            "arn": "arn:aws:ec2:us-west-2:039992076397:elastic-ip/eipalloc-08cf516ee3904d791",
            "association_id": "eipassoc-0d54c095cac93eb8f",
            "domain": "vpc",
            "id": "eipalloc-08cf516ee3904d791",
            "network_border_group": "us-west-2",
            "network_interface": "eni-056aeeff8d283d9de",
            "private_dns": "ip-10-0-102-202.us-west-2.compute.internal",
            "private_ip": "10.0.102.202",
            "public_dns": "ec2-44-234-7-49.us-west-2.compute.amazonaws.com",
            "public_ip": "44.234.7.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ml-infra-prod-vpc-us-west-2b"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-us-west-2b",
              "Project": "ML Infrastructure"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:internet-gateway/igw-0139c807bdcbd5871",
            "id": "igw-0139c807bdcbd5871",
            "owner_id": "039992076397",
            "tags": {
              "Name": "ml-infra-prod-vpc"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d779f0df7b724a86",
            "association_id": "eipassoc-06d85103d04ff7b20",
            "connectivity_type": "public",
            "id": "nat-05f32ef0ff08ff65d",
            "network_interface_id": "eni-0b00090556fd42786",
            "private_ip": "10.0.101.94",
            "public_ip": "35.165.153.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1910b7895dce464",
            "tags": {
              "Name": "ml-infra-prod-vpc-us-west-2a"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-us-west-2a",
              "Project": "ML Infrastructure"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cf516ee3904d791",
            "association_id": "eipassoc-0d54c095cac93eb8f",
            "connectivity_type": "public",
            "id": "nat-09e3e92065c88670d",
            "network_interface_id": "eni-056aeeff8d283d9de",
            "private_ip": "10.0.102.202",
            "public_ip": "44.234.7.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e009c5a1640de45e",
            "tags": {
              "Name": "ml-infra-prod-vpc-us-west-2b"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-us-west-2b",
              "Project": "ML Infrastructure"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9a17d7c0d095b791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f32ef0ff08ff65d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9a17d7c0d095b79",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c1ea3fc94332ffe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09e3e92065c88670d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c1ea3fc94332ffe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0139c807bdcbd5871",
            "id": "r-rtb-0387b602c70a467d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0387b602c70a467d0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:route-table/rtb-0c9a17d7c0d095b79",
            "id": "rtb-0c9a17d7c0d095b79",
            "owner_id": "039992076397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f32ef0ff08ff65d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ml-infra-prod-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-private-us-west-2a",
              "Project": "ML Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:route-table/rtb-01c1ea3fc94332ffe",
            "id": "rtb-01c1ea3fc94332ffe",
            "owner_id": "039992076397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e3e92065c88670d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ml-infra-prod-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-private-us-west-2b",
              "Project": "ML Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:route-table/rtb-0387b602c70a467d0",
            "id": "rtb-0387b602c70a467d0",
            "owner_id": "039992076397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0139c807bdcbd5871",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ml-infra-prod-vpc-public"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-public",
              "Project": "ML Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c480b79cd1526896",
            "route_table_id": "rtb-0c9a17d7c0d095b79",
            "subnet_id": "subnet-0f014bf5f3d1e0b54"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da892ae016478227",
            "route_table_id": "rtb-01c1ea3fc94332ffe",
            "subnet_id": "subnet-0f6c349cf7436d713"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d95baf4b5063b1e2",
            "route_table_id": "rtb-0387b602c70a467d0",
            "subnet_id": "subnet-0d1910b7895dce464"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e80340703a3e550",
            "route_table_id": "rtb-0387b602c70a467d0",
            "subnet_id": "subnet-0e009c5a1640de45e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:subnet/subnet-0f014bf5f3d1e0b54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f014bf5f3d1e0b54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039992076397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ml-infra-prod-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-private-us-west-2a",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:subnet/subnet-0f6c349cf7436d713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c349cf7436d713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039992076397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ml-infra-prod-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-private-us-west-2b",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:subnet/subnet-0d1910b7895dce464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1910b7895dce464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039992076397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ml-infra-prod-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-public-us-west-2a",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:subnet/subnet-0e009c5a1640de45e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e009c5a1640de45e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039992076397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ml-infra-prod-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc-public-us-west-2b",
              "Project": "ML Infrastructure"
            },
            "vpc_id": "vpc-0432252bd65b6b05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039992076397:vpc/vpc-0432252bd65b6b05c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015eacfcac8dd3e88",
            "default_route_table_id": "rtb-0a84a7f0a3a786187",
            "default_security_group_id": "sg-058e8f4218ba7ffd1",
            "dhcp_options_id": "dopt-03c9dd62af7e6aa4b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0432252bd65b6b05c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a84a7f0a3a786187",
            "owner_id": "039992076397",
            "tags": {
              "Name": "ml-infra-prod-vpc"
            },
            "tags_all": {
              "Environment": "ml-infra-prod",
              "ManagedBy": "Terraform",
              "Name": "ml-infra-prod-vpc",
              "Project": "ML Infrastructure"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}